# hulation

./: .dockerignore  .gitignore  BACKLOG.md  DEPLOYMENT.md  Dockerfile  Dockerfile.local  HA_OUTLINE.md  HA_PHASE2_STATUS.md  HA_PHASE3_STATUS.md  HA_PLAN1.md  HA_PLAN2.md  HA_PLAN3.md  HULAAGENT_PLAN.md  MIGRATION_0.md  MKDOCS_BUILDER_PLAN.md  Makefile  OPAQUE_PLAN.md  PHASE_0_STATUS.md  PHASE_1_STATUS.md  PHASE_2_STATUS.md  PHASE_3_STATUS.md  PHASE_4B_STATUS.md  PHASE_4C_STATUS.md  PHASE_4_STATUS.md  PHASE_5A_STATUS.md  PLAN_0.md  PLAN_1.md  PLAN_2.md  PLAN_3.md  PLAN_4.md  PLAN_4B.md  PLAN_4C.md  PLAN_5A.md  PLAN_5B.md  PLAN_OUTLINE.md  README.md  UI_PRD.md  build-docker.sh  docker-compose.yaml  docker-example-clickhouse-config.xml  (+13 more)
app/: app.go
app.old/: hello.go
backend/: detect.go  health.go  logs.go  logs_test.go  manager.go  network.go  proxy.go  types.go
badactor/: admin.go  badactor.go  coordinfo.go  default_signatures.yaml  ipinfo.go  ipinfo_test.go  model.go  signatures.go
builder-images/: README.md  build-images.sh
client/: agent.go  badactor.go  client.go  forms.go  grpc.go  grpc_forms.go  grpc_other.go  lander.go  opaque.go  sitedeploy.go  staging.go  staging_mount.go  totp.go
config/: analytics.go  auth.go  chat.go  cloudflare_ips.go  cloudflare_ips_default.yaml  cloudflare_origin_ca.go  config.go  confsubst.go  forwarder.go  git_creds_test.go  globalconfig.go  hsts.go  hsts_test.go  hula_ssl_devca_test.go  mailer.go  opaque.go  proxy_only_test.go  push.go  static.go  team.go
fiberhandler/: api.go  auth.go  common.go  debug.go  form.go  lander.go  nodebug.go  product.go  scripts.go  status.go  utils.go  visitor.go
hack/: install-protoc.sh
handler/: agent.go  agent_build.go  agent_build_stream.go  api.go  auth.go  builtinstatic.go  common.go  consent.go  consent_test.go  ctx.go  fiber_adapter.go  form.go  lander.go  nethttp_adapter.go  opa.go  product.go  redirect.go  scripts.go  sitedeploy.go  staging.go  staging_diff_test.go  status.go  totp.go  utils.go  visitor.go  widget_manifest.go  widget_manifest_test.go
hooks/: chain.go  global.go  risor.go  risor_test.go
hulaagent/: .gitignore  Cargo.toml
hulaagent/src/: client.rs  config.rs  error.rs  hlap.rs  main.rs
log/: log.go
middleware/: auth.go  cookie.go  logging.go  opa.go
model/: auth.go  auth_jwt_test.go  bounces.go  bounces_test.go  db.go  dblog.go  debugdbmodel.go  error.go  event.go  fingerprint.go  form.go  form_test.go  lander.go  landing.go  model_test.go  modeldebug.go  modelnodebug.go  nodebugdbmodel.go  testmodel.yaml  totp.go  visitor.go
router/: router.go
(+612 files in other folders)
