[package]
name = "hulaagent"
version = "0.1.0"
edition = "2021"
description = "Lightweight mTLS sidecar for hula. Local apps drive a hula server via a unix-socket text protocol (HLAP)."
license = "MIT"
publish = false

[[bin]]
name = "hula-agent"
path = "src/main.rs"

[dependencies]
# Single-threaded tokio for low memory + fast startup; we don't need
# the multi-thread scheduler for what is essentially a few concurrent
# unix-socket clients fanning into one outbound HTTP connection.
tokio = { version = "1", default-features = false, features = ["rt", "net", "io-util", "macros", "signal", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }

# mTLS HTTP client. rustls-tls (default features for now — pulls
# native roots so a Let's Encrypt-signed hula serving cert validates
# without per-deployment trust-store ceremony). Agent identity rides
# via reqwest::Identity built from the PEM blobs in the agent yaml.
# The `stream` feature lands for step 2b's log-streaming work.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

[profile.release]
# Aggressive size reduction — hulaagent is a sidecar; small binary
# and fast startup matter more than raw throughput.
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
